# MigrateAnyCppData

./: .gitignore  CMakeLists.txt  DeviceConfig.cpp  DeviceConfig.h  DeviceConfig_0002.h  DeviceConfig_0003.h  DeviceConfig_0004.h  DeviceConfig_0005.h  DeviceConfig_Initial.h  MigrateDeviceConfig.h  README.md  README_RU.md  main.cpp
MigrateAnyData/: MigrateAnyData.cpp
Tests/: Error_Current_Version_Return_Error.cpp  Error_In_Args.cpp  Error_Stored_Version__Do_Initial_And_MigrateUp.cpp  MigrateDown.cpp  MigrationDown_RandomAccess.cpp  MigrationUp.cpp  MigrationUp_RandomAccess.cpp  TestsCommon  TestsCommon.cpp  TestsCommon.h
